@@ -188,7 +188,15 @@ int ftpd_daemon(int s_argc, char **s_argv)
        */
 
       ret = ftpd_session(handle, 5000);
-      printf("FTP daemon [%d] ftpd_session returned %d\n", g_ftpdglob.pid, ret);
+
+      /* If any interesting happened (i.e., any thing other than a timeout),
+       * then report the interesting event.
+       */
+
+      if (ret != -ETIMEDOUT)
+        {
+          printf("FTP daemon [%d] ftpd_session returned %d\n", g_ftpdglob.pid, ret);
+        }
     }
 
   /* Close the FTPD server and exit (we can get here only if
